<resources>
    <string name="app_name">Game library</string>
    <string name="thisFieldCannotBeEmpty">Empty Value!</string>
    <string name="dialog_confirm">Yes</string>
    <string name="dialog_cancel">No</string>
    <string name="callingdialog">calling dialog</string>
    <string name="delete_dialog_tag">delete dialog</string>
    <string name="Title">Title</string>
    <string name="Developer">Developer</string>
    <string name="Publisher">Publisher</string>
    <string name="Data">Release date</string>
    <string name="add">Add</string>
    <string name="deleteicon">deleteIcon</string>
    <string name="saveButton">save</string>
    <string name="delete_question">You want to delete this game?</string>
</resources>
